<resources>
    <string name="app_name">LRC First Scout</string>
    <string name="new_team">New Team</string>
    <string name="modify_team">Modify Team</string>
    <string name="view_saved">View Saved</string>
    <string name="view_saved_teams">View Saved Teams</string>
    <string name="push">Push</string>
    <string name="lisgar_logo">Lisgar Robotics Club logo</string>
    <string name="new_match">New Match</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="team_number">Team number</string>
    <string name="team_name">Team name</string>
    <string name="additional_notes">Additional notes</string>
    <string name="issues">Issues</string>
    <string name="issue_description">Issue description (optional)</string>
    <string name="hardware">Hardware</string>
    <string name="software">Software</string>
    <string name="other">Other</string>
    <string name="objectives">Objectives: %d</string>
    <string name="consistency">Consistency: %d</string>
    <string name="driver_skill">Driver skill: %d</string>
    <string name="autonomous">Sandstorm: %d</string>
    <string name="new_team_name_number">New: Team %d: %s</string>
    <string name="team_list_element_location">Team %d: %s - %s</string>
    <string name="team_list_element">Team %d: %s</string>
    <string name="team_number_edit">Edit: Team %d</string>
    <string name="delete_team">Delete Team</string>
    <string name="error_has_occurred">An error has occurred.</string>
    <string name="edit_team">Edit Team</string>
    <string name="select_team">Select Team</string>
    <string name="edit_team_offline">Edit Team (Offline)</string>
    <string name="notes">Notes</string>
    <string name="auto">Sandstorm</string>
    <string name="consistency_plain">Consistency</string>
    <string name="driver_skill_plain">Driver skill</string>
    <string name="objective_plain">Objective</string>
    <string name="saved_teams">Saved Teams</string>
    <string name="match_number">Match number</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="team">Team</string>
    <string name="winning_alliance">Winning Alliance</string>
    <string name="score">Score</string>
    <string name="em_dash">—</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="ranking_points">Ranking Points</string>
    <string name="match_number_variable">Match: %d</string>
    <string name="delete_match">Delete Match</string>
    <string name="saved_data">Saved Data</string>
    <string name="new_match_number">New: Match %d</string>
    <string name="view_team">View Team</string>
    <string name="mark_for_deletion">Mark for deletion</string>
    <string name="defence">Defence: %d</string>
    <string name="defence_plain">Defence</string>
    <string name="city_of_origin">City, province of origin</string>
    <string name="location">Location</string>
    <string name="cargo">Cargo</string>
    <string name="hatch">Hatch</string>
    <string name="wheels">Wheels</string>
    <string name="climb">Climb</string>
    <string name="sandstorm_notes">Sandstorm notes</string>
    <string name="type_of_wheels">Type of wheels</string>
    <string name="highest_level">Highest level:</string>
    <string name="pickup_locations">Pickup locations:</string>
    <string name="floor">Floor</string>
    <string name="human">Human</string>
    <string name="piles">Piles</string>
    <string name="climb_level">Climb level:</string>
    <string name="level_3">3</string>
    <string name="level_2">2</string>
    <string name="level_1">1</string>
    <string name="climb_notes">Climb notes</string>
    <string name="blind">Blind</string>
    <string name="camera">Camera</string>
    <string name="auto_short">Auto</string>
    <string name="sandstorm_mode">Sandstorm mode:</string>
    <string name="sandstorm">Sandstorm</string>
    <string name="modify_team_with_number">Modify Team %d</string>
    <string name="confirm_delete">Are you sure you want to delete this team?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_access_message">Failed to access the API!</string>
    <string name="unknown_error">An unknown error has occurred.</string>
    <string name="no_internet">No internet connection!</string>
    <string name="missing_team_file">Critical error: Missing team file!</string>
    <string name="no_data">There is no data stored!</string>
    <string name="failed_to_delete">Failed to delete team %d</string>
    <string name="check_internet">Check your internet connection and try again.</string>
    <string name="invalid_team_number">Error: Invalid team number!</string>
    <string name="invalid_team_data">Error: Team data invalid</string>
    <string name="successful_upload">Successfully uploaded team data</string>
    <string name="data_saved">Data saved to text file.</string>
    <string name="failed_to_upload">Failed to upload team data!</string>
    <string name="driver_experience">Driver experience (yrs)</string>
    <string name="invalid_driver_exp">Invalid driver experience!</string>
    <string name="wheel_type_1">Kit of parts</string>
    <string name="wheel_type_2">Omnidirectional</string>
    <string name="wheel_type_3">Shopping cart</string>
    <string name="wheel_type_4">Pneumatic</string>
    <string name="wheel_type_5">Mechanum</string>
    <string name="other_colon">Other:</string>
</resources>
